https://bugs.webkit.org/show_bug.cgi?id=49320 Minor ResourceLoadScheduler cleanups

Reviewed by Darin Adler.

* loader/ResourceLoadScheduler.cpp:
(WebCore::ResourceLoadScheduler::scheduleLoad):
(WebCore::ResourceLoadScheduler::servePendingRequests):
(WebCore::ResourceLoadScheduler::HostInformation::~HostInformation):
(WebCore::ResourceLoadScheduler::HostInformation::remove):
(WebCore::ResourceLoadScheduler::HostInformation::hasRequests):
* loader/ResourceLoadScheduler.h:



Canonical link: https://commits.webkit.org/62633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72171 268f45cc-cd09-0410-ab3c-d52691b4dbfc