WebCore/loader/ResourceLoadScheduler.h
@@ -46,8 +46,8 @@ class SubresourceLoaderClient;
 class ResourceLoadScheduler : public Noncopyable {
 public:
     friend ResourceLoadScheduler* resourceLoadScheduler();
-    
-    enum Priority { VeryLow, Low, Medium, High };
+
+    enum Priority { VeryLow, Low, Medium, High, LowestPriority = VeryLow, HighestPriority = High };
     PassRefPtr<SubresourceLoader> scheduleSubresourceLoad(Frame*, SubresourceLoaderClient*, const ResourceRequest&, Priority = Low, SecurityCheckPolicy = DoSecurityCheck, bool sendResourceLoadCallbacks = true, bool shouldContentSniff = true);
     PassRefPtr<NetscapePlugInStreamLoader> schedulePluginStreamLoad(Frame*, NetscapePlugInStreamLoaderClient*, const ResourceRequest&);
     void addMainResourceLoad(ResourceLoader*);
@@ -82,7 +82,7 @@ private:
         RequestQueue& requestsPending(Priority priority) { return m_requestsPending[priority]; }
 
     private:                    
-        RequestQueue m_requestsPending[High + 1];
+        RequestQueue m_requestsPending[HighestPriority + 1];
         typedef HashSet<RefPtr<ResourceLoader> > RequestMap;
         RequestMap m_requestsLoading;
         const String m_name;
